image for download

--- a/latex/partie1.tex
+++ b/latex/partie1.tex
@@ -7,23 +7,19 @@ A partir d'une application cree, Izpack est capable de generer un installateur. 
 Tout type de programme peut etre package, que ce soit une application C++, Java...
 \subsection{Open-source}
 Izpack est sous license Apache 2. Cette license permet l'acces au code source et l'utilisation du logiciel. Il est tout a fait possible de l'utiliser pour une application commerciale voire meme, de modifier les sources pour correspondre a ses besoins. Une importante communaute s'est regroupee autour de ce projet ce qui a permit son evolution jusqu'a maintenant. Si un developpeur apporte des modifications utiles, il est encourage a en faire profiter la communaute, mais ce n'est pas une obligation.
-
 \subsection{Fonctionnalités}
 Izpack est un systeme modulaire, il possède de nombreuses fonctionnalités pour creer un installeur adapte a chacun.
 \subsubsection{Multi-plateforme}
 L'installeur generee par Izpack est un jar (java archive). Il suffit donc que la machine ait un machine virtuelle pour pouvoir lancer l'installation, indépendamment de la plateforme et du système d'exploitation. Il est neanmoins possibles de faire des traitements specifiques a certaines plateforme ou de convertir l'installeur pour etre specifique a une plateforme. 
 \subsubsection{Personnalisation}
 Izpack propose un ensemble de panels qui vont constituer l'installateur graphique. Chaque panels remplit une fonction specifique. L'aspect global et celui des panels est personnalisable par l'utilisateur via le descripteur XML.
-
 \subsubsection{Internationalisation}
 Izpack supporte la création d'installeur multilangues. Pour la localisation, tout repose sur des fichiers XML. Si une langue n'existe pas, il suffit de traduire les phrases/mots dans un fichier xml a utiliser lors de la creation de l'installeur.
-
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=5cm]{../image/LangChoice.png}
 	\caption{Exemple de choix de langue avec IzPack}
 \end{figure}
-
 \subsubsection{Installation automatique}
 A la fin de l'installation, il est possible de générer un script d'installation automatique. Ce script permet de reproduire l'installation réalisée sur d'autres machines.
 \begin{figure}[H]
@@ -31,12 +27,13 @@ A la fin de l'installation, il est possible de générer un script d'installatio
 	\includegraphics[width=12cm]{../image/SaveInstallXML.png}
 	\caption{Fin d'installation, enregistrement du script d'installation automatisee}
 \end{figure}
-
 \subsection{Popularité}
 Izpack est utilisé dans de grand projets comme Jboss, Xwiki, Glassfish... A l'heure actuelle, les téléchargements mensuels s'élèvent a 25.000.
-% Image des telechargement?
-
-
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.6\textwidth]{../image/telechargements.png}
+	\caption{Statistiques de telechargements}
+\end{figure}
  %---------------------------------------------------------
 \section{Architecture}
 \subsection{Architecture globale}
